...
    <!-- Menu item: Add the current site as a shortcut on the Home screen -->
    <string name="menu_add_to_shortcuts">Add to Shortcuts</string>
    <!-- Menu item: Remove the current site as a shortcut from the Home screen -->
    <string name="menu_remove_from_shortcuts">Remove from Shortcuts</string>

    <!-- Menu item: Shows information about features and changes that are new to this version -->
    <string name="menu_whats_new">What’s New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>

    <!-- Menu item: This is the label for a menu entry that shows how many trackers have been blocked
         for the currently loaded website. The number of blocked trackers is shown below this label.
         Next to this label is a switch that allows the user to temporarily enable / disable the
         blocking of trackers for the current browsing session - for example if the current website
         doesn't work correctly with blocked content. -->
...
    <string name="share_dialog_title">Share via</string>

    <!-- While a browsing session is active (in the foreground or background) we will show a notification
         so that the user doesn't forget about the website still being open. This text is shown in
         the notification. Clicking the notification will have the same effect as clicking the "erase"
         button in the application. -->
    <string name="notification_erase_text">Erase browsing history</string>

    <!-- Notification action to open Focus and resume the current browsing session. -->
    <string name="notification_action_open">Open</string>

    <!-- Notification action to erase the current browsing session AND switch to Focus (bring it
         to the foreground) -->
    <string name="notification_action_erase_and_open">Erase and Open</string>

    <!-- On Android 7+ users can add a shortcut for erasing the browsing history to the home screen.
...
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>

    <!-- In-app link (in settings) to Focus privacy notice. -->
    <string name="preference_privacy_notice">Privacy Notice</string>

    <!-- Item in Preferences that shows the about page. Parameter 1 is the app name, i.e. Firefox Focus/Firefox Klar. -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_choose_search_engine">Choose search engine</string>
...
    <string name="onboarding_protection_description" moz:removedIn="106">If your browsing needs change, it’s easy to scale your privacy settings up or down.</string>

    <!-- Onboarding: Start browsing -->
    <string name="onboarding_start_browsing" moz:removedIn="106">Start browsing</string>

    <!-- First run tour (Default browser): Title -->
    <string name="firstrun_defaultbrowser_title">Power up your privacy</string>
    <!-- First run tour (Default browser): Text. -->
    <string name="firstrun_defaultbrowser_text2">Take private browsing to the next level. Block ads and other content that can track you across sites and bog down page load times.</string>

    <!-- First run tour (Search): Title -->
    <string name="firstrun_search_title">Your search, your way</string>
    <!-- First run tour (Search): Text -->
    <string name="firstrun_search_text">Searching for something different? Choose another default search engine in Settings.</string>

    <!-- First run tour (Shortcut): Title -->
    <string name="firstrun_shortcut_title">Add shortcuts to your home screen</string>
    <!-- First run tour (Shortcut): Text. %1$s will be replaced with the name of the app (e.g. Firefox Focus) -->
    <string name="firstrun_shortcut_text">Return to your favorite sites in %1$s quickly. Just select \"Add to Home screen\" from the %1$s menu.</string>

    <!-- First run tour (Privacy): Title -->
    <string name="firstrun_privacy_title">Make privacy a habit</string>
    <!-- First run tour (Privacy): Text. %1$s will be replaced with the name of the app (e.g. Firefox Focus) -->
    <string name="firstrun_privacy_text">Set %1$s as your default browser and get the benefits of private browsing when you open webpages from other apps.</string>

    <string name="firstrun_close_button">OK, got it!</string>
    <string name="firstrun_skip_button">Skip</string>
    <string name="firstrun_next_button">Next</string>
...
    * To understand what notification channels are, see: https://www.androidcentral.com/notification-channels
    * To see how this string will look like in Android's UI, see: https://github.com/mozilla-mobile/focus-android/issues/863#issuecomment-324105723
    -->
    <string name="notification_browsing_session_channel_description">Notifications let you erase your %1$s session with a tap. You don’t need to open the app or see what’s running in your browser.</string>

    <!-- Label for a button in the "tabs tray" to erase the browsing history (closes all tabs and removes associated data). -->
    <string name="tabs_tray_action_erase">Erase browsing history</string>

    <!-- If the user decides to open the current page in another browser and if Firefox is not installed then we show this
      item in the list of browsers. Clicking it will open the app store installed on the device (usually that's Google Play). -->
    <string name="download_firefox">Download Firefox</string>

    <!-- Text shown in the "Your rights" screen.
...
