...
            android:key="@string/pref_key_biometric"
            android:layout="@layout/focus_preference_no_icon"
            android:summary="@string/preference_security_biometric_summary2"
            android:title="@string/preference_security_biometric" />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_secure"
            android:layout="@layout/focus_preference_no_icon"
            android:summary="@string/preference_privacy_stealth_summary"
            android:title="@string/preference_privacy_secure_mode" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
...
